tests/valid/proc_call_statement.lang
fn add(a: i32, b: i32) i32 {
    return 0;
}

extern fn main() void {
    add(1, 2);
}
